// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox test should render 1`] = `
.c1 {
  position: relative;
  width: 1rem;
  height: 1rem;
  border: 1px solid hsl(220,5%,20%);
  background-color: hsl(220,15%,10%);
  overflow: hidden;
  --x-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 0.5rem;
  border-radius: 0.25rem;
  opacity: 1;
}

.c3 {
  background-color: hsl(220,15%,10%);
  width: 100%;
  height: 100%;
  position: absolute;
}

.c2 {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: hsl(0,0%,95%);
}

.c0 > :not([hidden]) ~ :not([hidden]) {
  margin-left: 0.5rem;
}

.c0 svg {
  color: transparent;
  z-index: 10;
  position: relative;
}

.c0:hover div {
  background: hsl(220,15%,10%);
}

.c0:hover div > svg {
  color: hsl(0,0%,95%);
}

<div>
  <label
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        type="checkbox"
      />
      <div
        class="c3"
      />
      <svg
        aria-hidden="true"
        data-slot="icon"
        fill="none"
        height="12"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m4.5 12.75 6 6 9-13.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Checkbox test should render with disabled classes 1`] = `
.c1 {
  position: relative;
  width: 1rem;
  height: 1rem;
  border: 1px solid hsl(220,5%,20%);
  background-color: hsl(220,15%,10%);
  overflow: hidden;
  --x-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 0.5rem;
  border-radius: 0.25rem;
  opacity: 0.5;
}

.c3 {
  background-color: hsl(220,15%,10%);
  width: 100%;
  height: 100%;
  position: absolute;
}

.c2 {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  color: hsl(220,5%,70%);
}

.c0 > :not([hidden]) ~ :not([hidden]) {
  margin-left: 0.5rem;
}

.c0 svg {
  color: transparent;
  z-index: 10;
  position: relative;
}

.c0:hover div {
  background: hsl(220,15%,10%);
}

.c0:hover div > svg {
  color: hsl(0,0%,95%);
}

<div>
  <label
    class="c0"
    disabled=""
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        disabled=""
        type="checkbox"
      />
      <div
        class="c3"
      />
      <svg
        aria-hidden="true"
        data-slot="icon"
        fill="none"
        height="12"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m4.5 12.75 6 6 9-13.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </label>
</div>
`;
